<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cup"
    tools:context=".WinnerActivity">

    <TextView
        android:id="@+id/winner"
        android:layout_width="209dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text=""
        android:textColor="#FFC107"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="372dp"
        android:backgroundTint="#130E0E"
        android:onClick="playAgain"
        android:text="@string/play_again"
        android:textColor="#FAF4F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/winner"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="@+id/winner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="108dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:text="@string/share_results"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAgain" />


    <Button
        android:id="@+id/dial_button"
        android:layout_width="108dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="phoneCall"
        android:text="@string/dial"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"

        />

    <EditText
        android:id="@+id/editText_maps"
        android:layout_width="252dp"
        android:layout_height="36dp"
        android:layout_marginTop="14dp"
        android:background="@android:color/holo_orange_light"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/type_location_here"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/searchMap_button"
        app:layout_constraintEnd_toEndOf="@+id/searchMap_button"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/searchMap_button"
        app:layout_constraintTop_toBottomOf="@+id/shareText_button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/shareText_button"
        android:layout_width="153dp"
        android:layout_height="35dp"
        android:background="#FFC107"
        android:gravity="center"
        android:onClick="shareText"
        android:text="@string/text"
        android:textAlignment="gravity"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/searchMap_button"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/dial_button"
        app:layout_constraintVertical_bias="0.263"

        />

    <Button
        android:id="@+id/searchMap_button"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#FFC107"
        android:gravity="center"
        android:onClick="searchMap"
        android:text="@string/search_map"
        android:textSize="15sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/playAgain"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/playAgain"

        />

</android.support.constraint.ConstraintLayout>