<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/field"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="249dp"
        android:layout_height="68dp"
        android:text="@string/one_champion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/team1View"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="49dp"
        android:background="#3F51B5"
        android:gravity="center"

        android:text="@string/team_1"
        android:textColor="#FFFEFE"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/heading"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <TextView
        android:id="@+id/team2View"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:layout_marginTop="44dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/team_2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <Button
        android:id="@+id/team1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="364dp"
        android:background="#3F51B5"
        android:onClick="incrementSpartans"
        android:text="@string/count_digit_size"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/team1View"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/team1View" />

    <Button
        android:id="@+id/team2_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="364dp"
        android:background="#3F51B5"
        android:onClick="incrementVikings"
        android:text="@string/count_digit_size"

        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/team2View"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/team2View" />

</android.support.constraint.ConstraintLayout>